# gospel-pdf-viewer

./: .gitignore  MANIFEST.in  README.md  gospel_pdf.py  pyproject.toml  run.py  run.sh  setup.py
.github/workflows/: build.yml
AppImage/: AppRun  appimage_gen.sh  build-in-docker.sh  python3.7-stdlib.txt
Windows/: GospelPdfViewer.nsi  PDF_Bunny.nsi  gospel_pdf.spec  pdf_bunny.spec  version_info.txt
data/: compile_rc  compile_ui  gospel-pdf.desktop  io.github.ksharindam.gospel-pdf.metainfo.xml  io.github.ksharindam.pdf-bunny.metainfo.xml  mainwindow.ui  pdf-bunny.desktop  resources.qrc
debian/: changelog  control  copyright  rules
files/: compile_rc  compile_ui  gospel-pdf.desktop  main_window.ui  mainwindow.ui  resources.qrc
gospel_pdf/: __init__.py  dialogs.py  main.py  pdf_lib.py  plugin_manager.py  resources.py  resources_rc.py  ui_main_window.py  ui_mainwindow.py
pdf_bunny/: __init__.py  main.py  pdf_lib.py  plugin_manager.py
