# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "pdf_bunny.__version__"}

[project]
name = "pdf-bunny"
authors = [
    {name = "Arindam Chaudhuri", email = "ksharindam@gmail.com"},
]
license = "GPL-3.0-or-later"
requires-python = ">=3.8"

dynamic = ["version"]

[project.gui-scripts]
pdf_bunny = "pdf_bunny.main:main"
